# website

./: .editorconfig  .gitattributes  .gitignore  .nvim.lua  .rustfmt.toml  Cargo.toml  LICENSE  flake.nix  index.html  justfile  theme.css.tera  update-badges.sh
.github/workflows/: deploy.yml  update.yml
.woodpecker/: checks.yml  update.yml
data/: functions.json
img/backgrounds/: sources.txt
img/badges/: sources.txt
keys/: id_ed25519.pub
migrations/: 0001_init.sql
nix/: default.nix  formatter.nix  package.nix  shell.nix
res/: mimi-banner.psd  mimi-the-car.psd  mimi.psd
src/: ascii.rs  constants.rs  main.rs  templates.rs  tui.rs  uri.rs
src/api/: guestbook.rs  jellyfin.rs  lebel.rs  mod.rs  nixdle.rs
src/data/: badges.rs  links.rs  mod.rs
src/metadata/: robots.rs  sitemap.rs  uri.rs
static/: oneko.js  sga.json
styles/: base.css  base.scss  fonts.css  main.scss  reset.scss  themes.scss
styles/extra/: badges.css  contact.css  forms.css  guestbook.css  home.css
styles/pages/: badges.scss  guestbook.scss
styles/partials/: fonts.scss  forms.scss  jolly.scss  scrollbar.scss  sidebar.scss  text.scss
templates/: base.html  base.tera
templates/pages/: badges.html  badges.tera  blog.html  construction.html  contact.html  contact.tera  donate.html  donate.tera  guestbook.html  guestbook.tera  home.html  home.tera  sga-translator.html  sga-translator.tera
templates/partials/: badge.html  badge.tera  jolly.html  main.js  music.html  music.tera  nav.html  schema.json  sidebar.html  sidebar.tera
