[package]
name = "website"
description = "my personal website :3"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-HappyBunny OR MIT"
homepage = "https://adamperkowski.dev"
repository = "https://github.com/adamperkowski/website"
authors = ["Adam Perkowski <me@adamperkowski.dev>"]

[dependencies]
axum = { version = "0.8.6", default-features = false }
lazy_static = "1.5.0"
rust-embed = "8.8.0"
serde = { version = "1.0.228", default-features = false }
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
shuttle-shared-db = { version = "0.57.0", default-features = false, features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.6", default-features = false }
tera = { version = "1.20.1", default-features = false }
tower-http = { version = "0.6.6", default-features = false, features = ["fs"] }
