[package]
name = "website"
description = "my personal website :3"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-HappyBunny OR MIT"
homepage = "https://koi.rip"
repository = "https://git.koi.rip/koi/website"
authors = ["koi <me@koi.rip>"]

[dependencies]
axum = { version = "0.8.7", default-features = false, features = ["http1", "json", "tokio"] }
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
dotenv = { version = "0.15.0", default-features = false }
lazy_static = "1.5.0"
reqwest = { version = "0.12.25", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = "8.9.0"
rustrict = { version = "0.7.37" }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "derive", "macros", "migrate", "runtime-tokio", "sqlite"] }
tera = { version = "1.20.1", default-features = false }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.8", default-features = false, features = ["fs"] }

[profile.release]
panic = "abort"
